# sqlite-vibe

./: .gitignore  README.md  free_tier_usage.md  implementation.md  implemented.md  missing.md  phase2_extract.txt  problems.md  pyproject.toml  requirements.txt
examples/: demo.py
pysqlite/: __init__.py  ast.py  bitwise.py  btree.py  cell.py  cli.py  compile.py  constants.py  errors.py  jsonpath.py  lexer.py  opcode.py  pager.py  parser.py  record.py  schema.py  transaction.py  vfs.py  vm.py
pysqlite/functions/: __init__.py  aggregate.py  datetime.py  fts.py  json.py  math.py  scalar.py  window.py
pysqlite/virtualtables/: __init__.py  fts5.py  json_each.py  series.py
tests/compat/: test_read_real_sqlite.py  test_write_real_sqlite.py
tests/fuzz/: test_corrupt_db.py  test_fuzz.py  test_random_sql.py
tests/regression/: test_regression.py
tests/sql/: test_aggregates.py  test_alter.py  test_basic.py  test_compat.py  test_cte.py  test_ddl.py  test_expressions.py  test_fk.py  test_fts.py  test_generated_cols.py  test_indexes.py  test_insert.py  test_joins.py  test_json.py  test_pragmas.py  test_select.py  test_strict.py  test_subqueries.py  test_triggers.py  test_update_delete.py  test_upsert.py  test_views.py  test_window.py  test_without_rowid.py
tests/stress/: test_concurrent.py  test_large_inserts.py  test_long_transactions.py  test_stress.py
tests/unit/: test_bitwise.py  test_btree.py  test_cell.py  test_compile.py  test_errors.py  test_functions.py  test_lexer.py  test_pager.py  test_parser.py  test_record.py  test_schema.py  test_transaction.py  (+2 more)
