[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pysqlite"
version = "0.1.0"
description = "Complete SQLite reimplementation in pure Python"
requires-python = ">=3.11"

[project.scripts]
pysqlite = "pysqlite.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
